import and did the fonts

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css">
     <title>Interior-consultant</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+  <input type="checkbox" id="dropdown_checkbox">
+
+  <header>
+    <label class="dropdown_trigger" for="dropdown_checkbox"></label>
+    <h1 class="title">
+      This interior
+    </h1>
+  </header>
+
+  <nav>
+    <button>x</button>
+      <ul class=".list__menu_dropdown">
+        <li><a class="contents_menu-home" href="/home">home</a></li>
+        <li><a class="contents_menu collection" href="/discover">Collection</a></li>
+        <li><a class="contents_menu about" href="/photo">About</a></li>
+        <li><a class="contents_menu contact" href="/contact">contact</a></li>
+      </ul>
+  </nav>
+</div>
+
+  </body>
 </html>
