modified some styles of the aside information

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,10 +16,10 @@
     </h1>
   </header>
 
-  <nav>
-    <button>x</button>
-      <ul class=".list__menu_dropdown">
-        <li><a class="contents_menu-home" href="/home">home</a></li>
+  <nav class="navigation">
+    <button class="navigation__close">x</button>
+      <ul class="list__menu_dropdown">
+        <li><a class="contents_menu-home" href="/home">Home</a></li>
         <li><a class="contents_menu collection" href="/discover">Collection</a></li>
         <li><a class="contents_menu about" href="/photo">About</a></li>
         <li><a class="contents_menu contact" href="/contact">contact</a></li>
@@ -27,5 +27,30 @@
   </nav>
 </div>
 
+  <main>
+    <article class="main">
+      <header class="main__headings">
+        <h2>Modern interior</h2>
+      <p class="main__description">A full service residential & commercial interior design  and staging offering company proffesional organising & eco-service</p>
+      <button class="main__info">
+        Read more 
+        <img src="./images/arrow.svg"/>
+      </header>
+
+      <aside class="information">
+        <img src="./images/room.png" />
+        <div class="information__content">
+          <div class="information__details">
+            <p class="information__more--detailed"> Aliza Webber <br/> <small class="info"> Interior designer </small></p>
+          </div>
+            <p class="information__detailed--Aliza">Designed in 2020 by <br/> Aliza Webber</p>
+          </div>
+        </aside>
+      </button>
+    </article>
+  </main>
+  <footer>
+
+  </footer>
   </body>
 </html>
